# Y10FFPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/stan/y10ffplayer/: MainActivity.java  MediaPlayerEventListener.java  MediaPlayerFFmpeg.java  MediaPlayerInterface.java
app/src/main/java/com/stan/y10ffplayer/Utils/: LogUtil.java  PermissionUtil.java  TimeUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
ff10player/: CMakeLists.txt  build.gradle
ff10player/src/main/: AndroidManifest.xml
ff10player/src/main/cpp/: AndroidLog.h  CallJava.cpp  CallJava.h  PCMBean.cpp  PCMBean.h  PlayStatus.cpp  PlayStatus.h  Y10Audio.cpp  Y10Audio.h  Y10BufferQueue.cpp  Y10BufferQueue.h  Y10FFmpeg.cpp  Y10FFmpeg.h  Y10Queue.cpp  Y10Queue.h  native-lib.cpp
ff10player/src/main/cpp/include/ffmpeg/libavcodec/: avcodec.h  xvmc.h
ff10player/src/main/cpp/include/ffmpeg/libavdevice/: avdevice.h
ff10player/src/main/cpp/include/ffmpeg/libavformat/: avformat.h
ff10player/src/main/cpp/include/ffmpeg/libavutil/: common.h
ff10player/src/main/java/com/stan/ff10player/: FF10Encoder.java  FF10Player.java
ff10player/src/main/java/com/stan/ff10player/listener/: OnCallPcmInfoListener.java  OnCallPcmRateListener.java  OnCompleteListener.java  OnErrorListener.java  OnLoadListener.java  OnPreparedListener.java  OnResumePauseListener.java  OnSeekCompleteListener.java  OnTimeChangedListener.java
ff10player/src/main/res/values/: strings.xml
